--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
 Angularjs - ToDo List Demo
 ==========================
-A simple ToDo List Demo using Angular.js loosely based on the SproutCore 2.0 ToDo List sample.
+A simple ToDo List Demo using Angular.js loosely based on the Emberjs ToDo List sample.
